Début d'une nouvelle formule pour GOAD

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +62,7 @@
     "    def node_to_dot(node):\n",
     "        if node not in evidences.keys():\n",
     "            prob = total_prob.marginalize([n for n in nodes_wo_evidences if n != node], inplace=False).values[1]\n",
+    "            # prob = 0\n",
     "        else:\n",
     "            prob = 1\n",
     "        probH = int(prob * 255)\n",
@@ -119,7 +120,7 @@
     "                row = kts_dict[node['CVE']]\n",
     "                build_tools_tree(BAG, Parser(tokenizer(row['tool'])).parse(), id)\n",
     "                BAG.add_edge(row['skills'] + 'skills', id)\n",
-    "                BAG.add_edge(row['Type'], id)\n",
+    "                build_tools_tree(BAG, Parser(tokenizer(row['Type'])).parse(), id)\n",
     "                parents = BAG.get_parents(id)\n",
     "                BAG.add_cpds(TabularCPD(id, 2, cpt_l4.T, parents, evidence_card=2*np.ones(len(parents))))\n",
     "    # We add all the necessary CPDs to the BAG\n",
@@ -129,27 +130,27 @@
     "\n",
     "def build_tools_tree(BAG, ast, id):\n",
     "    if ast.type == 'AND':\n",
-    "        BAG.add_edge(ast, id)\n",
+    "        BAG.add_edge(ast.__repr__(), id)\n",
     "        for child in ast.children:\n",
-    "            build_tools_tree(BAG, child, ast)\n",
-    "        if BAG.get_cpds(ast) == None:\n",
-    "            BAG.add_cpds(TabularCPD(ast, 2, create_AND_table([ONE, ONE]).T, ast.children, evidence_card=2*np.ones(len(ast.children))))\n",
+    "            build_tools_tree(BAG, child, ast.__repr__())\n",
+    "        if BAG.get_cpds(ast.__repr__()) == None:\n",
+    "            BAG.add_cpds(TabularCPD(ast.__repr__(), 2, create_AND_table([ONE, ONE]).T, [child.__repr__() for child in ast.children], evidence_card=2*np.ones(len(ast.children))))\n",
     "    elif ast.type == 'OR':\n",
-    "        BAG.add_edge(ast, id)\n",
+    "        BAG.add_edge(ast.__repr__(), id)\n",
     "        for child in ast.children:\n",
-    "            build_tools_tree(BAG, child, ast)\n",
-    "        if BAG.get_cpds(ast) == None:\n",
-    "            BAG.add_cpds(TabularCPD(ast, 2, [[0.5], [0.5]]))\n",
+    "            build_tools_tree(BAG, child, ast.__repr__())\n",
+    "        if BAG.get_cpds(ast.__repr__()) == None:\n",
+    "            BAG.add_cpds(TabularCPD(ast.__repr__(), 2, [[0.5], [0.5]]))\n",
     "    else:\n",
-    "        BAG.add_edge(ast, id)\n",
-    "        if BAG.get_cpds(ast) == None:\n",
-    "            BAG.add_cpds(TabularCPD(ast, 2, [[0.5], [0.5]]))\n",
+    "        BAG.add_edge(ast.__repr__(), id)\n",
+    "        if BAG.get_cpds(ast.__repr__()) == None:\n",
+    "            BAG.add_cpds(TabularCPD(ast.__repr__(), 2, [[0.5], [0.5]]))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +165,9 @@
       "WARNING:pgmpy:Replacing existing CPD for 14\n",
       "WARNING:pgmpy:Replacing existing CPD for 16\n",
       "WARNING:pgmpy:Replacing existing CPD for 17\n",
-      "WARNING:pgmpy:Replacing existing CPD for 19\n"
+      "WARNING:pgmpy:Replacing existing CPD for 19\n",
+      "WARNING:pgmpy:Replacing existing CPD for CQCM\n",
+      "WARNING:pgmpy:Replacing existing CPD for MITM\n"
      ]
     }
    ],
@@ -191,15 +194,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 43 nodes and 55 edges\n",
-      "BayesianNetwork with 19 nodes and 20 edges\n"
+      "BayesianNetwork with 38 nodes and 55 edges\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\ExactInference.py:763: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "CPD associated with Impacket&PetitPotam.py doesn't have proper parents associated with it.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m evidence \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m14\u001b[39m : \u001b[38;5;241m1\u001b[39m}\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(output_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m----> 3\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(\u001b[43mto_dot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBAG\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnodes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevidence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdisplay_kts\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path \u001b[38;5;241m/\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBAG_ref\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.dot\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      5\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(to_dot(BAG_ref, nodes, evidence))\n",
+      "Cell \u001b[1;32mIn[25], line 5\u001b[0m, in \u001b[0;36mto_dot\u001b[1;34m(BAG, nodes, evidences, display_kts)\u001b[0m\n\u001b[0;32m      3\u001b[0m regex \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+:RULE \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+ \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m((.*?)\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m):\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(BAG)\n\u001b[1;32m----> 5\u001b[0m prop \u001b[38;5;241m=\u001b[39m \u001b[43mBeliefPropagation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBAG\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m nodes_wo_evidences \u001b[38;5;241m=\u001b[39m [n \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m nodes\u001b[38;5;241m.\u001b[39mkeys() \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m evidences\u001b[38;5;241m.\u001b[39mkeys()]\n\u001b[0;32m      7\u001b[0m total_prob \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mquery(nodes_wo_evidences, evidence\u001b[38;5;241m=\u001b[39mevidences)\n",
+      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\ExactInference.py:697\u001b[0m, in \u001b[0;36mBeliefPropagation.__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m    696\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, model):\n\u001b[1;32m--> 697\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mBeliefPropagation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    699\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model, JunctionTree):\n\u001b[0;32m    700\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mjunction_tree \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mto_junction_tree()\n",
+      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\base.py:68\u001b[0m, in \u001b[0;36mInference.__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, model):\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m model\n\u001b[1;32m---> 68\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel, JunctionTree):\n\u001b[0;32m     71\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvariables \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(chain(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mnodes()))\n",
+      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\BayesianNetwork.py:418\u001b[0m, in \u001b[0;36mBayesianNetwork.check_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    416\u001b[0m \u001b[38;5;66;03m# Check if the evidence set of the CPD is same as its parents.\u001b[39;00m\n\u001b[0;32m    417\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mset\u001b[39m(evidence) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mset\u001b[39m(parents):\n\u001b[1;32m--> 418\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    419\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCPD associated with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m doesn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt have proper parents associated with it.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    420\u001b[0m     )\n\u001b[0;32m    422\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(cpd\u001b[38;5;241m.\u001b[39mvariables) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mset\u001b[39m(cpd\u001b[38;5;241m.\u001b[39mstate_names\u001b[38;5;241m.\u001b[39mkeys())) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    423\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    424\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCPD for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m doesn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt have state names defined for all the variables.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    425\u001b[0m     )\n",
+      "\u001b[1;31mValueError\u001b[0m: CPD associated with Impacket&PetitPotam.py doesn't have proper parents associated with it."
      ]
     }
    ],
@@ -222,25 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Node not present in the Directed Graph",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[59], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# tab = BeliefPropagation(BAG).query(['Impacket'], evidence=evidence)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mBAG\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_cpds\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mImpacket\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\BayesianNetwork.py:297\u001b[0m, in \u001b[0;36mBayesianNetwork.get_cpds\u001b[1;34m(self, node)\u001b[0m\n\u001b[0;32m    295\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    296\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m node \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnodes():\n\u001b[1;32m--> 297\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNode not present in the Directed Graph\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    298\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    299\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m cpd \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcpds:\n",
-      "\u001b[1;31mValueError\u001b[0m: Node not present in the Directed Graph"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
      ]
     }
    ],
    "source": [
     "# tab = BeliefPropagation(BAG).query(['Impacket'], evidence=evidence)\n",
-    "print(BAG.get_cpds('Impacket'))"
+    "print(BAG.get_parents('Impacket&PetitPotam.py'))"
    ]
   }
  ],
