--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Name of the simulation\n",
-    "simulation = \"selection\"\n",
+    "simulation = \"HightLevel\"\n",
     "\n",
     "# Constante for probability one\n",
     "ONE = 0.999"
@@ -48,28 +48,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_dot(BAG, nodes, evidences, display_kts=False):\n",
+    "def to_dot(BAG, nodes, evidences, display_kts=False, calculate_probabilities=False):\n",
     "    dot = 'digraph G {\\n'\n",
     "    regex = r\"\\d+:RULE \\d+ \\((.*?)\\):\\d+\\.\\d+\"\n",
     "    print(BAG)\n",
-    "    prop = BeliefPropagation(BAG)\n",
     "    nodes_wo_evidences = [n for n in nodes.keys() if n not in evidences.keys()]\n",
-    "    total_prob = prop.query(nodes_wo_evidences, evidence=evidences)\n",
+    "    honeynodes = [str(n) for n in [69, 50,51,70,67,52,53,56,60,62,64,65]]\n",
+    "    if calculate_probabilities:\n",
+    "        prop = BeliefPropagation(BAG)\n",
+    "        total_prob = prop.query(nodes_wo_evidences, evidence=evidences)\n",
     "    def node_to_dot(node):\n",
-    "        if node not in evidences.keys():\n",
+    "        if node not in evidences.keys() and calculate_probabilities:\n",
     "            prob = total_prob.marginalize([n for n in nodes_wo_evidences if n != node], inplace=False).values[1]\n",
     "            # prob = 0\n",
     "        else:\n",
     "            prob = 1\n",
     "        probH = int(prob * 255)\n",
-    "        color = '#' + format(probH, '02X') +''+ format(255-probH, '02X') + '00'\n",
+    "        # color = '#' + format(probH, '02X') +''+ format(255-probH, '02X') + '00'\n",
     "        CVE = nodes[node]['CVE']\n",
     "        LABEL = nodes[node]['label']\n",
     "        number = LABEL.split(\":\")[0]\n",
+    "        color = 'blue' if number in honeynodes else 'red'\n",
     "        prob = \"{:.3f}\".format(prob)\n",
     "        shape = nodes[node]['shape']\n",
     "        if CVE != 'null':\n",
@@ -90,17 +93,10 @@
     "\n",
     "def kts_layer(BAG, ONE, nodes):    \n",
     "    # The skills layer:\n",
-    "    cpd_ALskills = TabularCPD('ALskills', 2, [[1-ONE], [ONE]])\n",
-    "    cpd_AHskills = TabularCPD('AHskills', 2, [[ONE], [1-ONE]])\n",
+    "    cpd_Lskills = TabularCPD('Lskills', 2, [[1-ONE], [ONE]])\n",
+    "    cpd_Hskills = TabularCPD('Hskills', 2, [[ONE], [1-ONE]])\n",
     "    cpd_0skills = TabularCPD('uskills', 2, [[0.5], [0.5]])\n",
-    "    BAG.add_edge('ALskills', 'Lskills')\n",
-    "    BAG.add_edge('ALskills', 'Hskills')\n",
-    "    BAG.add_edge('AHskills', 'Hskills')\n",
-    "    BAG.add_edge('Hskills', 'Lskills')\n",
-    "    cpd_Lskills = TabularCPD('Lskills', 2, create_OR_table([0.9, 1]).T, ['ALskills', 'Hskills'], evidence_card=2*np.ones(2))\n",
-    "    cpd_Hskills = TabularCPD('Hskills', 2, create_OR_table([0.1, 0.9]).T, ['ALskills', 'AHskills'], evidence_card=2*np.ones(2))\n",
-    "\n",
-    "\n",
+    "    \n",
     "    # The knowledge layer:\n",
     "    cpd_knowledge = [TabularCPD(knowledge, 2, [[0.5], [0.5]]) for knowledge in ['Known vulnerabilities', 'CQCM', 'No credentials', 'MITM', 'Permissions move', 'Privilege escalation', 'Lateral move', 'ADCS']]\n",
     "\n",
@@ -124,7 +120,7 @@
     "                parents = BAG.get_parents(id)\n",
     "                BAG.add_cpds(TabularCPD(id, 2, cpt_l4.T, parents, evidence_card=2*np.ones(len(parents))))\n",
     "    # We add all the necessary CPDs to the BAG\n",
-    "    for cpd in [cpd_0skills, cpd_Lskills, cpd_ALskills, cpd_AHskills, cpd_Hskills] + cpd_knowledge:\n",
+    "    for cpd in [cpd_0skills, cpd_Lskills, cpd_Hskills] + cpd_knowledge:\n",
     "        if BAG.__contains__(cpd.variable):\n",
     "            BAG.add_cpds(cpd)\n",
     "\n",
@@ -140,7 +136,7 @@
     "        for child in ast.children:\n",
     "            build_tools_tree(BAG, child, ast.__repr__())\n",
     "        if BAG.get_cpds(ast.__repr__()) == None:\n",
-    "            BAG.add_cpds(TabularCPD(ast.__repr__(), 2, [[0.5], [0.5]]))\n",
+    "            BAG.add_cpds(TabularCPD(ast.__repr__(), 2, create_OR_table([1, 1]).T, [child.__repr__() for child in ast.children], evidence_card=2*np.ones(len(ast.children))))\n",
     "    else:\n",
     "        BAG.add_edge(ast.__repr__(), id)\n",
     "        if BAG.get_cpds(ast.__repr__()) == None:\n",
@@ -150,23 +146,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pgmpy:Replacing existing CPD for 2\n",
       "WARNING:pgmpy:Replacing existing CPD for 4\n",
       "WARNING:pgmpy:Replacing existing CPD for 6\n",
-      "WARNING:pgmpy:Replacing existing CPD for 10\n",
-      "WARNING:pgmpy:Replacing existing CPD for 12\n",
+      "WARNING:pgmpy:Replacing existing CPD for 8\n",
+      "WARNING:pgmpy:Replacing existing CPD for 11\n",
       "WARNING:pgmpy:Replacing existing CPD for 14\n",
-      "WARNING:pgmpy:Replacing existing CPD for 16\n",
       "WARNING:pgmpy:Replacing existing CPD for 17\n",
       "WARNING:pgmpy:Replacing existing CPD for 19\n",
-      "WARNING:pgmpy:Replacing existing CPD for CQCM\n",
+      "WARNING:pgmpy:Replacing existing CPD for 21\n",
+      "WARNING:pgmpy:Replacing existing CPD for 23\n",
+      "WARNING:pgmpy:Replacing existing CPD for 24\n",
+      "WARNING:pgmpy:Replacing existing CPD for 26\n",
+      "WARNING:pgmpy:Replacing existing CPD for 28\n",
+      "WARNING:pgmpy:Replacing existing CPD for 29\n",
+      "WARNING:pgmpy:Replacing existing CPD for 30\n",
+      "WARNING:pgmpy:Replacing existing CPD for 34\n",
+      "WARNING:pgmpy:Replacing existing CPD for 36\n",
+      "WARNING:pgmpy:Replacing existing CPD for 37\n",
+      "WARNING:pgmpy:Replacing existing CPD for 38\n",
+      "WARNING:pgmpy:Replacing existing CPD for 40\n",
+      "WARNING:pgmpy:Replacing existing CPD for 41\n",
+      "WARNING:pgmpy:Replacing existing CPD for 45\n",
       "WARNING:pgmpy:Replacing existing CPD for MITM\n"
      ]
     }
@@ -194,44 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 38 nodes and 55 edges\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\ExactInference.py:763: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  \"\"\"\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "CPD associated with Impacket&PetitPotam.py doesn't have proper parents associated with it.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m evidence \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m14\u001b[39m : \u001b[38;5;241m1\u001b[39m}\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(output_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m----> 3\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(\u001b[43mto_dot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBAG\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnodes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevidence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdisplay_kts\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(path \u001b[38;5;241m/\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBAG_ref\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.dot\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      5\u001b[0m     f\u001b[38;5;241m.\u001b[39mwrite(to_dot(BAG_ref, nodes, evidence))\n",
-      "Cell \u001b[1;32mIn[25], line 5\u001b[0m, in \u001b[0;36mto_dot\u001b[1;34m(BAG, nodes, evidences, display_kts)\u001b[0m\n\u001b[0;32m      3\u001b[0m regex \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+:RULE \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+ \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m((.*?)\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m):\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(BAG)\n\u001b[1;32m----> 5\u001b[0m prop \u001b[38;5;241m=\u001b[39m \u001b[43mBeliefPropagation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBAG\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m nodes_wo_evidences \u001b[38;5;241m=\u001b[39m [n \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m nodes\u001b[38;5;241m.\u001b[39mkeys() \u001b[38;5;28;01mif\u001b[39;00m n \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m evidences\u001b[38;5;241m.\u001b[39mkeys()]\n\u001b[0;32m      7\u001b[0m total_prob \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mquery(nodes_wo_evidences, evidence\u001b[38;5;241m=\u001b[39mevidences)\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\ExactInference.py:697\u001b[0m, in \u001b[0;36mBeliefPropagation.__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m    696\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, model):\n\u001b[1;32m--> 697\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mBeliefPropagation\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    699\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model, JunctionTree):\n\u001b[0;32m    700\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mjunction_tree \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mto_junction_tree()\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\inference\\base.py:68\u001b[0m, in \u001b[0;36mInference.__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, model):\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m model\n\u001b[1;32m---> 68\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     70\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel, JunctionTree):\n\u001b[0;32m     71\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvariables \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(chain(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mnodes()))\n",
-      "File \u001b[1;32mc:\\Users\\docuser\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pgmpy\\models\\BayesianNetwork.py:418\u001b[0m, in \u001b[0;36mBayesianNetwork.check_model\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    416\u001b[0m \u001b[38;5;66;03m# Check if the evidence set of the CPD is same as its parents.\u001b[39;00m\n\u001b[0;32m    417\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mset\u001b[39m(evidence) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mset\u001b[39m(parents):\n\u001b[1;32m--> 418\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    419\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCPD associated with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m doesn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt have proper parents associated with it.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    420\u001b[0m     )\n\u001b[0;32m    422\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(cpd\u001b[38;5;241m.\u001b[39mvariables) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mset\u001b[39m(cpd\u001b[38;5;241m.\u001b[39mstate_names\u001b[38;5;241m.\u001b[39mkeys())) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    423\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    424\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCPD for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnode\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m doesn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt have state names defined for all the variables.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    425\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: CPD associated with Impacket&PetitPotam.py doesn't have proper parents associated with it."
+      "BayesianNetwork with 67 nodes and 119 edges\n",
+      "BayesianNetwork with 45 nodes and 52 edges\n"
      ]
     }
    ],
    "source": [
-    "evidence = {14 : 1}\n",
+    "evidence = {15:1}\n",
     "with open(output_file, 'w') as f:\n",
-    "    f.write(to_dot(BAG, nodes, evidence, display_kts=True))\n",
+    "    f.write(to_dot(BAG, nodes, evidence, display_kts=False, calculate_probabilities=False))\n",
     "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
     "    f.write(to_dot(BAG_ref, nodes, evidence))"
    ]
@@ -247,20 +232,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "+-------+----------------------+-----+---------------------+\n",
+      "| 32    | 32(0)                | ... | 32(1)               |\n",
+      "+-------+----------------------+-----+---------------------+\n",
+      "| 42    | 42(0)                | ... | 42(1)               |\n",
+      "+-------+----------------------+-----+---------------------+\n",
+      "| 43    | 43(0)                | ... | 43(1)               |\n",
+      "+-------+----------------------+-----+---------------------+\n",
+      "| 31(0) | 0.99                 | ... | 0.06400000000000002 |\n",
+      "+-------+----------------------+-----+---------------------+\n",
+      "| 31(1) | 0.010000000000000009 | ... | 0.9359999999999999  |\n",
+      "+-------+----------------------+-----+---------------------+\n"
      ]
     }
    ],
    "source": [
     "# tab = BeliefPropagation(BAG).query(['Impacket'], evidence=evidence)\n",
-    "print(BAG.get_parents('Impacket&PetitPotam.py'))"
+    "print(BAG.get_cpds(31))"
    ]
   }
  ],
