Avant tentative de supprimer des noeuds

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,9 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens: [('VAR', 'Responder'), ('AND', '&'), ('LPAREN', '('), ('VAR', 'impacket'), ('OR', '|'), ('VAR', 'Metasploit'), ('RPAREN', ')')]\n",
+      "AST: Responder&impacket|Metasploit\n",
+      "&\n",
+      "Responder\n",
+      "|\n",
+      "impacket\n",
+      "Metasploit\n",
+      "Compiled Expression: (Responder & (impacket | Metasploit))\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "import re\n",
@@ -35,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +151,7 @@
     "        for child in ast.children:\n",
     "            build_tools_tree(BAG, child, ast.__repr__())\n",
     "        if BAG.get_cpds(ast.__repr__()) == None:\n",
-    "            BAG.add_cpds(TabularCPD(ast.__repr__(), 2, create_OR_table([1, 1]).T, [child.__repr__() for child in ast.children], evidence_card=2*np.ones(len(ast.children))))\n",
+    "            BAG.add_cpds(TabularCPD(ast.__repr__(), 2, create_OR_table([ONE, ONE]).T, [child.__repr__() for child in ast.children], evidence_card=2*np.ones(len(ast.children))))\n",
     "    else:\n",
     "        BAG.add_edge(ast.__repr__(), id)\n",
     "        if BAG.get_cpds(ast.__repr__()) == None:\n",
@@ -146,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,24 +171,17 @@
       "WARNING:pgmpy:Replacing existing CPD for 4\n",
       "WARNING:pgmpy:Replacing existing CPD for 6\n",
       "WARNING:pgmpy:Replacing existing CPD for 8\n",
-      "WARNING:pgmpy:Replacing existing CPD for 11\n",
+      "WARNING:pgmpy:Replacing existing CPD for 12\n",
       "WARNING:pgmpy:Replacing existing CPD for 14\n",
-      "WARNING:pgmpy:Replacing existing CPD for 17\n",
+      "WARNING:pgmpy:Replacing existing CPD for 16\n",
+      "WARNING:pgmpy:Replacing existing CPD for 18\n",
       "WARNING:pgmpy:Replacing existing CPD for 19\n",
-      "WARNING:pgmpy:Replacing existing CPD for 21\n",
       "WARNING:pgmpy:Replacing existing CPD for 23\n",
-      "WARNING:pgmpy:Replacing existing CPD for 24\n",
+      "WARNING:pgmpy:Replacing existing CPD for 25\n",
       "WARNING:pgmpy:Replacing existing CPD for 26\n",
-      "WARNING:pgmpy:Replacing existing CPD for 28\n",
+      "WARNING:pgmpy:Replacing existing CPD for 27\n",
       "WARNING:pgmpy:Replacing existing CPD for 29\n",
       "WARNING:pgmpy:Replacing existing CPD for 30\n",
-      "WARNING:pgmpy:Replacing existing CPD for 34\n",
-      "WARNING:pgmpy:Replacing existing CPD for 36\n",
-      "WARNING:pgmpy:Replacing existing CPD for 37\n",
-      "WARNING:pgmpy:Replacing existing CPD for 38\n",
-      "WARNING:pgmpy:Replacing existing CPD for 40\n",
-      "WARNING:pgmpy:Replacing existing CPD for 41\n",
-      "WARNING:pgmpy:Replacing existing CPD for 45\n",
       "WARNING:pgmpy:Replacing existing CPD for MITM\n"
      ]
     }
@@ -201,22 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 67 nodes and 119 edges\n",
-      "BayesianNetwork with 45 nodes and 52 edges\n"
+      "BayesianNetwork with 50 nodes and 80 edges\n",
+      "BayesianNetwork with 31 nodes and 36 edges\n"
      ]
     }
    ],
    "source": [
     "evidence = {15:1}\n",
     "with open(output_file, 'w') as f:\n",
-    "    f.write(to_dot(BAG, nodes, evidence, display_kts=False, calculate_probabilities=False))\n",
+    "    f.write(to_dot(BAG, nodes, evidence, display_kts=False, calculate_probabilities=True))\n",
     "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
     "    f.write(to_dot(BAG_ref, nodes, evidence))"
    ]
@@ -232,24 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+----------------------+-----+---------------------+\n",
-      "| 32    | 32(0)                | ... | 32(1)               |\n",
-      "+-------+----------------------+-----+---------------------+\n",
-      "| 42    | 42(0)                | ... | 42(1)               |\n",
-      "+-------+----------------------+-----+---------------------+\n",
-      "| 43    | 43(0)                | ... | 43(1)               |\n",
-      "+-------+----------------------+-----+---------------------+\n",
-      "| 31(0) | 0.99                 | ... | 0.06400000000000002 |\n",
-      "+-------+----------------------+-----+---------------------+\n",
-      "| 31(1) | 0.010000000000000009 | ... | 0.9359999999999999  |\n",
-      "+-------+----------------------+-----+---------------------+\n"
+      "+-------+------+-----------------------+\n",
+      "| 3     | 3(0) | 3(1)                  |\n",
+      "+-------+------+-----------------------+\n",
+      "| 31(0) | 0.99 | 0.0010000000000000009 |\n",
+      "+-------+------+-----------------------+\n",
+      "| 31(1) | 0.01 | 0.999                 |\n",
+      "+-------+------+-----------------------+\n"
      ]
     }
    ],
