Déjà quelques graphes interressants

--- a/bag_playbook copy.ipynb
+++ b/bag_playbook copy.ipynb
@@ -9,9 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens: [('VAR', 'Responder'), ('AND', '&'), ('LPAREN', '('), ('VAR', 'impacket'), ('OR', '|'), ('VAR', 'Metasploit'), ('RPAREN', ')')]\n",
+      "AST: Responder&impacket|Metasploit\n",
+      "&\n",
+      "Responder\n",
+      "|\n",
+      "impacket\n",
+      "Metasploit\n",
+      "Compiled Expression: (Responder & (impacket | Metasploit))\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "import re\n",
@@ -35,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,21 +72,16 @@
     "    regex = r\"\\d+:RULE \\d+ \\((.*?)\\):\\d+\\.\\d+\"\n",
     "    print(BAG)\n",
     "    nodes_wo_evidences = [n for n in nodes.keys() if n not in evidences.keys()]\n",
-    "    nodes_1 = nodes_wo_evidences[:len(nodes_wo_evidences)//2]\n",
-    "    nodes_2 = nodes_wo_evidences[len(nodes_wo_evidences)//2:]\n",
     "    honeynodes = [str(n) for n in range(30,52)]\n",
     "    if calculate_probabilities:\n",
     "        prop = BeliefPropagation(BAG)\n",
-    "        total_prob1 = prop.query(nodes_1, evidence=evidences)\n",
-    "        total_prob2 = prop.query(nodes_2, evidence=evidences)\n",
+    "        # total_prob = prop.query(nodes_wo_evidences, evidence=evidences)\n",
     "    def node_to_dot(node):\n",
     "        if node not in evidences.keys() and calculate_probabilities:\n",
-    "            # prob = prop.query([node], evidence=evidences).values[1]\n",
-    "            if node in nodes_1:\n",
-    "                prob = total_prob1.marginalize([n for n in nodes_1 if n != node], inplace=False).values[1]\n",
-    "            elif node in nodes_2:\n",
-    "                prob = total_prob2.marginalize([n for n in nodes_2 if n != node], inplace=False).values[1]\n",
-    "            print(node, prob)        \n",
+    "            prob = prop.query([node], evidence=evidences).values[1]\n",
+    "            print(node, prob)\n",
+    "            # prob = total_prob.marginalize([n for n in nodes_wo_evidences if n != node], inplace=False).values[1]\n",
+    "            # prob = 0\n",
     "        else:\n",
     "            prob = 1\n",
     "        probH = int(prob * 255)\n",
@@ -100,10 +110,9 @@
     "\n",
     "def kts_layer(BAG, ONE, nodes):    \n",
     "    # The skills layer:\n",
-    "    cpd_Lskills = TabularCPD('Lskills', 2, [[0.1], [0.9]])\n",
-    "    cpd_Hskills = TabularCPD('Hskills', 2, [[0.9], [0.1]])\n",
-    "    # cpd_Lskills = TabularCPD('Lskills', 2, [[0.5], [0.5]])\n",
-    "\n",
+    "    # cpd_Lskills = TabularCPD('Lskills', 2, [[1-2*ONE], [2*ONE]])\n",
+    "    cpd_Hskills = TabularCPD('Hskills', 2, [[ONE], [1-ONE]])\n",
+    "    cpd_Lskills = TabularCPD('Lskills', 2, [[0.5], [0.5]])\n",
     "    \n",
     "    # The knowledge layer:\n",
     "    cpd_knowledge = [TabularCPD(knowledge, 2, [[0.5], [0.5]]) for knowledge in ['Known vulnerabilities', 'CQCM', 'No credentials', 'MITM', 'Permissions move', 'Privilege escalation', 'Lateral move', 'ADCS']]\n",
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +200,13 @@
       "WARNING:pgmpy:Replacing existing CPD for 21\n",
       "WARNING:pgmpy:Replacing existing CPD for 23\n",
       "WARNING:pgmpy:Replacing existing CPD for 25\n",
-      "WARNING:pgmpy:Replacing existing CPD for 26\n",
+      "WARNING:pgmpy:Replacing existing CPD for 26\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "WARNING:pgmpy:Replacing existing CPD for 27\n",
       "WARNING:pgmpy:Replacing existing CPD for 29\n",
       "WARNING:pgmpy:Replacing existing CPD for 30\n",
@@ -205,15 +220,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BayesianNetwork with 49 nodes and 86 edges\n",
+      "1 0.002148150237587352\n",
+      "2 0.0019167783599121067\n",
+      "3 0.0018863190792956534\n",
+      "4 0.0011092854559394915\n",
+      "5 0.0039925271944424735\n",
+      "6 0.0013721744931064399\n",
+      "7 0.003668775703405301\n",
+      "8 0.0033401448102694615\n",
+      "9 0.16282129922723274\n",
+      "10 0.1619832825097424\n",
+      "11 0.15367369313421886\n",
+      "12 0.19108096762730772\n",
+      "13 0.9999980723896015\n",
+      "14 0.0023996233674209366\n",
+      "15 0.008784489330001345\n",
+      "16 0.019509998320805428\n",
+      "18 0.41453797756682154\n",
+      "19 0.4145379775668213\n",
+      "20 0.009958987205609659\n",
+      "21 0.0033333995809887783\n",
+      "22 0.0039993565980951055\n",
+      "23 0.0013707812564451077\n",
+      "24 0.0056644463222779795\n",
+      "25 0.0023996233674209383\n",
+      "26 0.001372174493106439\n",
+      "27 0.0023996233674209396\n",
+      "28 0.008784489330001387\n",
+      "29 0.019509998320805504\n",
+      "30 0.0025743844822539858\n",
+      "31 0.011865569569423378\n",
+      "BayesianNetwork with 31 nodes and 36 edges\n"
+     ]
+    }
+   ],
    "source": [
-    "# evidence = {27:1}\n",
-    "# with open(path / (\"output_\" + str(27) + \".dot\"), 'w') as f:\n",
-    "#     f.write(to_dot(BAG, nodes, evidence, display_kts=False, calculate_probabilities=True))\n",
-    "# with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
-    "#     f.write(to_dot(BAG_ref, nodes, evidence))"
+    "evidence = {17:1}\n",
+    "with open(output_file, 'w') as f:\n",
+    "    f.write(to_dot(BAG, nodes, evidence, display_kts=False, calculate_probabilities=True))\n",
+    "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
+    "    f.write(to_dot(BAG_ref, nodes, evidence))"
    ]
   },
   {
@@ -227,45 +281,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 49 nodes and 86 edges\n"
+      "+-------+---------+\n",
+      "| 13(0) | 1e-05   |\n",
+      "+-------+---------+\n",
+      "| 13(1) | 0.99999 |\n",
+      "+-------+---------+\n"
      ]
     }
    ],
    "source": [
-    "evidence = {17:1, 27:1, 21:1}\n",
-    "with open(path / (\"output_\" + str(21) + \".dot\"), 'w') as f:\n",
-    "    f.write(to_dot(BAG, nodes, evidence, display_kts=False, calculate_probabilities=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------------+----------------+\n",
-      "| Hskills    |   phi(Hskills) |\n",
-      "+============+================+\n",
-      "| Hskills(0) |         0.9230 |\n",
-      "+------------+----------------+\n",
-      "| Hskills(1) |         0.0770 |\n",
-      "+------------+----------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "tab = BeliefPropagation(BAG).query(['Hskills'], evidence=evidence)\n",
-    "print(tab)"
+    "# tab = BeliefPropagation(BAG).query(['Impacket'], evidence=evidence)\n",
+    "print(BAG.get_cpds(13))"
    ]
   }
  ],
