On approche du résulatta un peu pluys propre

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,15 @@
     "    regex = r\"\\d+:RULE \\d+ \\((.*?)\\):\\d+\\.\\d+\"\n",
     "    print(BAG)\n",
     "    nodes_wo_evidences = [n for n in nodes.keys() if n not in evidences.keys()]\n",
-    "    nodes_1 = nodes_wo_evidences[:len(nodes_wo_evidences)//2]\n",
-    "    nodes_2 = nodes_wo_evidences[len(nodes_wo_evidences)//2:]\n",
+    "    nodes_1 = nodes_wo_evidences[:len(nodes_wo_evidences)//3]\n",
+    "    nodes_2 = nodes_wo_evidences[len(nodes_wo_evidences)//3:(len(nodes_wo_evidences)*2)//3]\n",
+    "    nodes_3 = nodes_wo_evidences[(len(nodes_wo_evidences)*2)//3:]\n",
     "    honeynodes = [str(n) for n in range(30,52)]\n",
     "    if calculate_probabilities:\n",
     "        prop = BeliefPropagation(BAG)\n",
     "        total_prob1 = prop.query(nodes_1, evidence=evidences)\n",
     "        total_prob2 = prop.query(nodes_2, evidence=evidences)\n",
+    "        total_prob3 = prop.query(nodes_3, evidence=evidences)\n",
     "    def node_to_dot(node):\n",
     "        if node not in evidences.keys() and calculate_probabilities:\n",
     "            # prob = prop.query([node], evidence=evidences).values[1]\n",
@@ -71,6 +73,8 @@
     "                prob = total_prob1.marginalize([n for n in nodes_1 if n != node], inplace=False).values[1]\n",
     "            elif node in nodes_2:\n",
     "                prob = total_prob2.marginalize([n for n in nodes_2 if n != node], inplace=False).values[1]\n",
+    "            elif node in nodes_3:\n",
+    "                prob = total_prob3.marginalize([n for n in nodes_3 if n != node], inplace=False).values[1]\n",
     "            print(node, prob)        \n",
     "        else:\n",
     "            prob = 1\n",
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -183,18 +187,17 @@
       "WARNING:pgmpy:Replacing existing CPD for 4\n",
       "WARNING:pgmpy:Replacing existing CPD for 6\n",
       "WARNING:pgmpy:Replacing existing CPD for 8\n",
+      "WARNING:pgmpy:Replacing existing CPD for 10\n",
       "WARNING:pgmpy:Replacing existing CPD for 12\n",
       "WARNING:pgmpy:Replacing existing CPD for 14\n",
       "WARNING:pgmpy:Replacing existing CPD for 16\n",
       "WARNING:pgmpy:Replacing existing CPD for 18\n",
-      "WARNING:pgmpy:Replacing existing CPD for 19\n",
-      "WARNING:pgmpy:Replacing existing CPD for 21\n",
+      "WARNING:pgmpy:Replacing existing CPD for 20\n",
+      "WARNING:pgmpy:Replacing existing CPD for 22\n",
       "WARNING:pgmpy:Replacing existing CPD for 23\n",
-      "WARNING:pgmpy:Replacing existing CPD for 25\n",
+      "WARNING:pgmpy:Replacing existing CPD for 24\n",
       "WARNING:pgmpy:Replacing existing CPD for 26\n",
       "WARNING:pgmpy:Replacing existing CPD for 27\n",
-      "WARNING:pgmpy:Replacing existing CPD for 29\n",
-      "WARNING:pgmpy:Replacing existing CPD for 30\n",
       "WARNING:pgmpy:Replacing existing CPD for MITM\n"
      ]
     }
@@ -205,15 +208,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BayesianNetwork with 44 nodes and 79 edges\n",
+      "BayesianNetwork with 28 nodes and 32 edges\n"
+     ]
+    }
+   ],
    "source": [
-    "# evidence = {27:1}\n",
-    "# with open(path / (\"output_\" + str(27) + \".dot\"), 'w') as f:\n",
-    "#     f.write(to_dot(BAG, nodes, evidence, display_kts=False, calculate_probabilities=True))\n",
-    "# with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
-    "#     f.write(to_dot(BAG_ref, nodes, evidence))"
+    "evidence = {}\n",
+    "with open(path / (\"output_\" + str(27) + \".dot\"), 'w') as f:\n",
+    "    f.write(to_dot(BAG, nodes, evidence, display_kts=False, calculate_probabilities=False))\n",
+    "with open(path / (\"BAG_ref\" + \".dot\"), 'w') as f:\n",
+    "    f.write(to_dot(BAG_ref, nodes, evidence))"
    ]
   },
   {
@@ -227,14 +239,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BayesianNetwork with 49 nodes and 86 edges\n"
+      "BayesianNetwork with 44 nodes and 79 edges\n",
+      "1 0.07802117249696613\n",
+      "2 0.08567427419017368\n",
+      "3 0.9881804791506632\n",
+      "4 0.9978672418161094\n",
+      "5 0.9995196184625778\n",
+      "6 0.9291904574326048\n",
+      "7 0.9312149323229669\n",
+      "8 0.9269948461222266\n",
+      "9 0.9293623931612245\n",
+      "10 0.931725699728357\n",
+      "11 0.999999430810387\n",
+      "12 0.07628497848064304\n",
+      "13 0.07872270428630333\n",
+      "14 0.07448745817975554\n",
+      "15 0.08422273174232942\n",
+      "16 0.08865829746235948\n",
+      "18 0.09546127602605328\n",
+      "19 0.9897851099870381\n",
+      "20 0.9945392766438585\n",
+      "22 0.07542820376339958\n",
+      "23 0.9289958541102785\n",
+      "24 0.056021892377660185\n",
+      "25 0.05909660266791672\n",
+      "26 0.07133484613074408\n",
+      "28 0.9894979809649975\n"
      ]
     }
    ],
@@ -246,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -256,9 +293,9 @@
       "+------------+----------------+\n",
       "| Hskills    |   phi(Hskills) |\n",
       "+============+================+\n",
-      "| Hskills(0) |         0.9230 |\n",
+      "| Hskills(0) |         0.8375 |\n",
       "+------------+----------------+\n",
-      "| Hskills(1) |         0.0770 |\n",
+      "| Hskills(1) |         0.1625 |\n",
       "+------------+----------------+\n"
      ]
     }
