Petite réorganisation des fichiers en vue de l'écriture du rapport

--- a/bag_playbook.ipynb
+++ b/bag_playbook.ipynb
@@ -9,9 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens: [('VAR', 'Responder'), ('AND', '&'), ('LPAREN', '('), ('VAR', 'impacket'), ('OR', '|'), ('VAR', 'Metasploit'), ('RPAREN', ')')]\n",
+      "AST: Responder&impacket|Metasploit\n",
+      "&\n",
+      "Responder\n",
+      "|\n",
+      "impacket\n",
+      "Metasploit\n",
+      "Compiled Expression: (Responder & (impacket | Metasploit))\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "import re\n",
@@ -36,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_dot(BAG_ref, nodes, [], path, \"reference\", display_kts=False, calculate_probabilities=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -253,6 +277,47 @@
     "print(tab)\n",
     "tab = BeliefPropagation(BAG).query(['Impacket'], evidence={str(13): 1, str(22): 1})\n",
     "print(tab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+------+------+\n",
+      "| A    | A(0) | A(1) |\n",
+      "+------+------+------+\n",
+      "| B(0) | 0.8  | 0.3  |\n",
+      "+------+------+------+\n",
+      "| B(1) | 0.2  | 0.7  |\n",
+      "+------+------+------+\n",
+      "+------+----------+\n",
+      "| A    |   phi(A) |\n",
+      "+======+==========+\n",
+      "| A(0) |   0.3404 |\n",
+      "+------+----------+\n",
+      "| A(1) |   0.6596 |\n",
+      "+------+----------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pgmpy.models import BayesianNetwork\n",
+    "bayesian_model = BayesianNetwork([('A', 'B')])\n",
+    "\n",
+    "cpt_a =[[0.5], [0.5]]\n",
+    "cpd_a = TabularCPD('A', 2, cpt_a)\n",
+    "cpd_b = TabularCPD('B', 2, [[0.8, 0.3], [0.2,0.7]], ['A'], evidence_card=[2])\n",
+    "cpd_virtual = TabularCPD('B', 2, [[0.2],[0.8]])\n",
+    "\n",
+    "bayesian_model.add_cpds(cpd_a, cpd_b)\n",
+    "belief_propagation = BeliefPropagation(bayesian_model)\n",
+    "print(bayesian_model.get_cpds('B'))\n",
+    "print(belief_propagation.query(variables=['A'], virtual_evidence={cpd_virtual}))\n"
    ]
   }
  ],
